Adding another TokenScanner test